# Action-Manual-Tagger

./: .gitignore  .gitignore.txt  README.md
ActionTagger/: ActionTagger.pro  BHVClient.cpp  BHVClient.h  CMakeLists.txt  CMakeLists.txt.user.50868b1  CMakeLists.txt.user.599069a  ImagesTab.cpp  ImagesTab.h  MyQSlider.cpp  TabWidget.cpp  TabWidget.h  Type.h  VHDLTab.cpp  VHDLTab.h  VideoTab.cpp  VideoTab.h  customwidget.cpp  customwidget.h  customwidgetsubaction.cpp  customwidgetsubaction.h  interval.cpp  interval.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ActionTagger/videos/json/: playing_golf.json  walking_cat.json
bhvsource/: AsyncServer.py  bvhplay.py  client.cpp  menu.py  servidor.py  skeleton.py  transport.py
bhvsource/save/: bvhplay.py
build-ActionTagger-Desktop_Qt_5_12_6_MSVC2017_64bit-Debug/: .ninja_deps  .ninja_log  .qmake.stash  ActionTagger.cbp  CMakeCache.txt  Makefile  Makefile.Debug  Makefile.Release  build.ninja  cmake_install.cmake  rules.ninja  test  test.json
build-ActionTagger-Desktop_Qt_5_12_6_MSVC2017_64bit-Debug/ActionTagger_autogen/: mocs_compilation.cpp
build-ActionTagger-Desktop_Qt_5_12_6_MSVC2017_64bit-Debug/json-develop/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  nlohmann_json.cbp  nlohmann_jsonConfigVersion.cmake  nlohmann_jsonTargets.cmake
json-develop/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  cmake_install.cmake  nlohmann_json.sln  nlohmann_jsonConfigVersion.cmake  nlohmann_jsonTargets.cmake
preprocess_data/: prepoccess_video.py  prepoccess_videos.py
preprocess_data/output/: hit_6.avi  hit_7.avi  labels.txt  move_back_2.avi  none_0.avi  (+21 more)
(+4 files in other folders)
